--- a/Views/userViews/productList.ejs
+++ b/Views/userViews/productList.ejs
@@ -67,12 +67,12 @@
 						<div class="head mt-3">Sort By Price </div>
 						<ul class="main-categories">
 							<li class="main-nav-list">
-								<a class="nav-link" href="/category?sort=price_asc&&id=<%= categoryId %>">
+								<a class="nav-link" href="/productList?sort=price_asc&&id=<%= categoryId %>">
 									<span class="lnr lnr-arrow-right"></span>Low --> high
 								</a>
 							</li>
 							<li class="main-nav-list">
-								<a class="nav-link" href="/category?sort=price_desc&&id=<%= categoryId %>">
+								<a class="nav-link" href="/productList?sort=price_desc&&id=<%= categoryId %>">
 									<span class="lnr lnr-arrow-right"></span>High --> Low
 								</a>
 							</li>
@@ -82,28 +82,29 @@
 			</div>
 			<div class="col-xl-9 col-lg-8 col-md-7">
 				<!-- Start Filter Bar -->
-				<div class="filter-bar d-flex flex-wrap align-items-center">
-					<div class="pagination">
-						<% if (currentPage > 1) { %>
-						<a href="/category?page=<%= currentPage - 1 %>&id=<%= categoryId %>" class="prev-arrow">
-							<i class="fa fa-long-arrow-left" aria-hidden="true"></i>
-						</a>
-						<% } %>
-						<% for (let i = 1; i <= totalPages; i++) { %>
-						<% if (currentPage === i) { %>
-						<a href="#" class="active"><%= i %></a>
-						<% } else { %>
-						<a href="/category?page=<%= i %>&id=<%= categoryId %>"><%= i %></a>
-						<% } %>
-						<% } %>
-						<% if (currentPage < totalPages) { %>
-						<a href="/category?page=<%= currentPage + 1 %>&id=<%= categoryId %>" class="next-arrow">
-							<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						</a>
-						<% } %>
-					</div>
-				</div>
-				<!-- End Filter Bar -->
+                <div class="filter-bar d-flex flex-wrap align-items-center">
+                    <div class="pagination">
+                    <% if (currentPage > 1) { %>
+                    <a href="/productList?page=<%= currentPage - 1 %>" class="prev-arrow">
+                        <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+                    </a>
+                    <% } %>
+                    <% for (let i = 1; i <= totalPages; i++) { %>
+                    <% if (currentPage === i) { %>
+                    <a href="#" class="active"><%= i %></a>
+                    <% } else { %>
+                    <a href="/productList?page=<%= i %>"><%= i %></a>
+                    <% } %>
+                    <% } %>
+                    <% if (currentPage < totalPages) { %>
+                    <a href="/productList?page=<%= currentPage + 1 %>" class="next-arrow">
+                        <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                    </a>
+                    <% } %>
+                    </div>
+                </div>
+                <!-- End Filter Bar -->
+                
 				<!-- Start Best Seller -->
 				<section class="lattest-product-area pb-40 category-list ml-5">
 					<div class="row">
@@ -139,28 +140,29 @@
 				</section>
 				<!-- End Best Seller -->
 				<!-- Start Filter Bar -->
-				<div class="filter-bar d-flex flex-wrap align-items-center">
-					<div class="pagination">
-						<% if (currentPage > 1) { %>
-						<a href="/category?page=<%= currentPage - 1 %>&id=<%= categoryId %>" class="prev-arrow">
-							<i class="fa fa-long-arrow-left" aria-hidden="true"></i>
-						</a>
-						<% } %>
-						<% for (let i = 1; i <= totalPages; i++) { %>
-						<% if (currentPage === i) { %>
-						<a href="#" class="active"><%= i %></a>
-						<% } else { %>
-						<a href="/category?page=<%= i %>&id=<%= categoryId %>"><%= i %></a>
-						<% } %>
-						<% } %>
-						<% if (currentPage < totalPages) { %>
-						<a href="/category?page=<%= currentPage + 1 %>&id=<%= categoryId %>" class="next-arrow">
-							<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						</a>
-						<% } %>
-					</div>
-				</div>
-				<!-- End Filter Bar -->
+                <div class="filter-bar d-flex flex-wrap align-items-center">
+                    <div class="pagination">
+                        <% if (currentPage > 1) { %>
+                            <a href="/productList?page=<%= currentPage - 1 %>" class="prev-arrow">
+                              <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+                            </a>
+                          <% } %>
+                          <% for (let i = 1; i <= totalPages; i++) { %>
+                            <% if (currentPage === i) { %>
+                              <a href="#" class="active"><%= i %></a>
+                            <% } else { %>
+                              <a href="/productList?page=<%= i %>"><%= i %></a>
+                            <% } %>
+                          <% } %>
+                          <% if (currentPage < totalPages) { %>
+                            <a href="/productList?page=<%= currentPage + 1 %>" class="next-arrow">
+                              <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                            </a>
+                          <% } %>
+                    </div>
+                </div>
+                <!-- End Filter Bar -->
+  
 			</div>
 		</div>
 	</div>
