--- a/Views/userViews/product.ejs
+++ b/Views/userViews/product.ejs
@@ -99,7 +99,7 @@
 				<div class="tab-pane fade show active" id="review" role="tabpanel" aria-labelledby="review-tab">
 					<p><%= product[0].description %></p>
 				</div>
-				<!-- {{!-- <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+				{{!-- <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
 					<div class="table-responsive">
 						<table class="table">
 							<tbody>
@@ -170,7 +170,7 @@
 							</tbody>
 						</table>
 					</div>
-				</div> --}} -->
+				</div> --}}
 			</div>
 		</div>
 	</section>
